canadianized that shit

--- a/.config/misc/homepage.html
+++ b/.config/misc/homepage.html
@@ -10,7 +10,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-<title>~ newtab ~</title>
+<title>newtab</title>
 
 <style type="text/css">
 html,body {
@@ -191,8 +191,8 @@ var links=[
     ["---",                             "---"],
 
     // Search -         box-3
-    ["Google",                          "https://www.google.no/#q="],
-    ["Images",                          "https://www.google.no/search?tbm=isch&q="],
+    ["Google",                          "https://www.google.ca/#q="],
+    ["Images",                          "https://www.google.ca/search?tbm=isch&q="],
     ["YouTube",                         "https://www.youtube.com/results?search_query="],
     ["Wikipedia",                       "http://en.wikipedia.org/w/index.php?search="],
     ["IMDb",                            "http://www.imdb.com/find?q="],
